# rendering_engine

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindGLM.cmake  FindSDL2.cmake
lib/x86/: assimp.lib
resources/models/teapot/: default.mtl
resources/shaders/: blur.frag  deferred_light_box.frag  deferred_light_box.vert  deferred_lighting_pass.frag  deferred_lighting_pass.vert  gbuffer.frag  gbuffer.vert  postprocess.frag  shadowmap.vert  shadowmap_debug.frag  shadowmap_debug.vert  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag
src/: main.cpp
src/framework/3d/: camera.cpp  camera.h  cube.cpp  cube.h  mesh.cpp  mesh.h  model.cpp  model.h  quad.cpp  quad.h  renderobject.cpp  renderobject.h  shadowmap.cpp  shadowmap.h  skybox.cpp  skybox.h  texture.cpp  texture.h
src/framework/base/: time.cpp  time.h
src/framework/gpu/: gbuffer.cpp  gbuffer.h  shader.cpp  shader.h  shader_storage_buffer.hpp
src/framework/light/: light.h  pointlight.cpp  pointlight.h
src/framework/postprocess/: postprocess.cpp  postprocess.h  ssao.cpp  ssao.h
src/framework/renderer/: renderer_gl.cpp  renderer_gl.h
src/framework/scene/: lightcontroller.cpp  lightcontroller.h  scene.cpp  scene.h
src/utils/: global_constants.h  random_generator.cpp  random_generator.h
